# src/main/resources/openapi/management.yml
@@ -615,6 +615,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GroupResponse'
+  /meeting/{groupId}:
+    post:
+      parameters:
+        - name: groupId
+          in: path
+          schema:
+            type: integer
+            format: int64
+          required: true
+      operationId: createMeeting
+      description: creates new meeting
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: string
+              format: date-time
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MeetingResponse'
 components:
   schemas:
     TopicRequest:
@@ -962,6 +986,30 @@ components:
         students:
           type: array
           items:
+            $ref: '#/components/schemas/StudentResponse'
+
+    MeetingResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        date:
+          type: string
+          format: date-time
+        presenceList:
+          type: array
+          items:
+            $ref: '#/components/schemas/PresenceResponse'
+    PresenceResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        wasPresent:
+          type: boolean
+        student:
             $ref: '#/components/schemas/StudentResponse'
     Role:
       type: string
